[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/Menu.gd" type="Script" id=1]

[sub_resource type="Animation" id=1]
resource_name = "menu_fade_in"
length = 1.3
tracks/0/type = "value"
tracks/0/path = NodePath("TransitionLayer/Background:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[node name="Menu" type="Node"]
script = ExtResource( 1 )

[node name="MenuLayer" type="CanvasLayer" parent="."]

[node name="Background" type="ColorRect" parent="MenuLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MapButton" type="Button" parent="MenuLayer"]
anchor_left = 0.475586
anchor_top = 0.587
anchor_right = 0.547188
anchor_bottom = 0.6
margin_left = -95.0
margin_top = -24.2
margin_right = 86.68
margin_bottom = 40.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
text = "Map"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="StartButton" type="Button" parent="MenuLayer"]
anchor_left = 0.47675
anchor_top = 0.333667
anchor_right = 0.53925
anchor_bottom = 0.333667
margin_left = -112.192
margin_top = -40.2
margin_right = 111.808
margin_bottom = 39.8
text = "Start"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="TransitionLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="Background" type="ColorRect" parent="TransitionLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpeningAnimation" type="AnimationPlayer" parent="."]
anims/menu_fade_in = SubResource( 1 )

[connection signal="pressed" from="MenuLayer/MapButton" to="." method="_on_MapButton_pressed"]
[connection signal="pressed" from="MenuLayer/StartButton" to="." method="_on_StartButton_pressed"]
